# kv_graph_ql

./: .rustfmt.toml  Cargo.toml  README.md  cargo.toml
db_engine/: Cargo.toml
db_engine/src/: errors.rs  lib.rs
graph_ql_server_gen/: Cargo.toml
graph_ql_server_gen/test_data/: hotel.graphql  test_model1.graphql  test_model1.sdml
graphql-parser/: Cargo.toml
graphql-value/: Cargo.toml
graphql_parser/: Cargo.toml
graphql_parser/src/: lib.rs  pos.rs
graphql_parser/src/parse/: executable.rs  mod.rs  utils.rs
graphql_parser/src/types/: executable.rs  mod.rs  service.rs
graphql_parser/tests/: recursion_limit.rs
graphql_value/: Cargo.toml
graphql_value/src/: deserializer.rs  lib.rs  (+4 more)
query_engine/: Cargo.toml
query_engine/src/: base.rs  context.rs  custom_directive.rs  error.rs  executor.rs  lib.rs  meta_types.rs  registry.rs  request.rs  response.rs  schema.rs
query_engine/src/introspection/: meta_types.rs  mod.rs
query_engine/src/introspection/types/: directive.rs  enum_value.rs  field.rs  input_value.rs  kind.rs  mod.rs  schema.rs  type.rs
query_engine/src/registry/: cache_control.rs  meta_types.rs  mod.rs
query_engine/src/registry/meta_types/: from_service_doc.rs  mod.rs
query_engine/src/scalar/: bool.rs  datetime.rs  float.rs  id.rs  int.rs  mod.rs  string.rs
query_engine/src/validation/: mod.rs  suggestion.rs  test_harness.rs  utils.rs  utlis.rs  visitor.rs
query_engine/src/validation/rules/: arguments_of_correct_type.rs  default_values_of_correct_type.rs  directives_unique.rs  fields_on_correct_type.rs  fragments_on_composite_types.rs  known_argument_names.rs  known_directives.rs  known_fragment_names.rs  known_type_names.rs  mod.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  no_unused_variables.rs  overlapping_fields_can_be_merged.rs  possible_fragment_spreads.rs  provided_non_null_arguments.rs  scalar_leafs.rs  unique_argument_names.rs  unique_variable_names.rs  variables_are_input_types.rs  variables_in_allowed_position.rs
query_engine/src/validation/visitors/: depth.rs  mod.rs
query_engine/test_data/: test_crud_api_def.graphql
query_engine/test_data/crud_queries/: create_user_with_existing_mentees.graphql  create_user_with_existing_mentees.json  create_user_with_existing_profile.graphql  create_user_with_existing_profile.json  create_user_with_existing_spouse.graphql  create_user_with_existing_spouse.json  create_user_with_mentees.graphql  create_user_with_mentees.json  create_user_with_posts.ast  create_user_with_posts.graphql  create_user_with_posts.json  create_user_with_profile.graphql  create_user_with_profile.json  create_user_with_spouse.json
query_engine/test_data/validation/: test_depth.graphql  test_schema.graphql
schema-transpiler/: Cargo.toml
schema_transpiler/: Cargo.toml
schema_transpiler/src/: lib.rs
schema_transpiler/src/graphql_ast/: mod.rs  service_document.rs
schema_transpiler/src/graphql_ast/service_document/: display_helpers.rs
schema_transpiler/src/graphql_gen/: crud_api.rs  enum_type.rs  error.rs  misc_type.rs  mod.rs  open_crud.rs  query_api.rs  query_type.rs  root_mutation_type.rs  root_query_type.rs  type.rs  where_input.rs
schema_transpiler/src/graphql_gen/aux_type/: mod.rs
schema_transpiler/src/graphql_gen/input_type/: create.rs  helpers.rs  mod.rs  order_by_input.rs  update.rs  where_input.rs  where_unique_input.rs
schema_transpiler/src/graphql_gen/input_type/filter/: mod.rs  where.rs  where_unique.rs
schema_transpiler/src/graphql_gen/open_crud/: fields.rs  mod.rs  types.rs
schema_transpiler/src/graphql_gen/open_crud_name/: fields.rs  mod.rs  types.rs
schema_transpiler/test_data/: sample_graphql.ast  test_create_input_types_def.graphql  test_create_user_input_def.graphql  test_crud_api_def.graphql  test_crud_api_def.sdml  test_enum_def.sdml  test_generate_crud_api_def.sdml  test_model1.graphql  test_query_api_def.graphql  test_query_api_def.graphqll  test_query_api_def.sdml  test_root_mutation_type_def.graphql  test_root_mutation_type_def.sdml  test_root_query_type_def.graphql  test_type_and_aux_types_def.graphql  test_type_def.graphql  test_user_create_input_types_def.graphql  travel_higraph_schema.graphql  user_order_by_input_type.graphql  user_where_input_type.graphql
schema_transpiler/test_data/input_type/: connect_position_input_def.graphql  test_create_input_types_def.graphql  test_create_input_types_def.sdml  test_update_input_types_def.graphql  test_update_input_types_def.sdml  test_user_create_input_types_def.graphql  test_user_update_input_def.graphql  test_user_update_input_types_def.graphql  user_where_input.sdml  user_where_unique_input.graphql
sdml-parser/: Cargo.toml
sdml_parser/: Cargo.toml
(+53 files in other folders)
