[workspace]
resolver = "2"
members = [
  "sdml_parser",
  "schema_transpiler",
  
  # graphql_value and graphql_parser are forked from (https://github.com/async-graphql/async-graphql)
  # and modified for kv_graph_ql.
  "graphql_value",
  "graphql_parser",
]

[workspace.dependencies]
sdml_parser = {path = "sdml_parser", version = "0.1.0"}
graphql_parser = { path = "graphql_parser", version = "7.0.6" }
graphql_value = { path = "graphql_value", version = "7.0.6" }

chumsky = { version = "1.0.0-alpha.7" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
indexmap = { version = "2", features = ["serde"] }
bytes = { version = "1.6.0", features = ["serde"] }
pluralizer = {version = "0.4.0"}