[workspace]
resolver = "2"
members = [
  # Parses & Validates SDML file to build AST.
  "sdml_parser",
  # Transpiles SDML AST into OpenCRUD GraphQL Schema type defs.
  "schema_transpiler",
  # Valdiates and executes OpenCRUD query/mutation to build GraphQL response.
  "query_engine",
  # Exposes underlying DB to query_engine.
  "db_engine",
  
  # graphql_value and graphql_parser are forked from (https://github.com/async-graphql/async-graphql)
  # and modified for kv_graph_ql.
  "graphql_value",
  "graphql_parser",
]

[workspace.dependencies]
sdml_parser = {path = "sdml_parser", version = "0.1.0"}
schema_transpiler = {path = "schema_transpiler", version = "0.1.0"}
graphql_parser = { path = "graphql_parser", version = "7.0.6" }
graphql_value = { path = "graphql_value", version = "7.0.6" }

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
indexmap = { version = "2", features = ["serde"] }
bytes = { version = "1.6.0", features = ["serde"] }
thiserror = {version = "2"}
once_cell = {version = "1.20"}
chrono = {version = "0.4"}
futures-util = {version = "0.3", features = [
  "std",
  "io",
  "sink",
  "async-await",
  "async-await-macro",
]}
async-trait = {version = "0.1.83"}
http = {version = "1.2.0"}
fnv = {version = "1.0.3"}

