[package]
name = "query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sdml_parser.workspace = true
schema_transpiler.workspace = true
graphql_parser.workspace = true
graphql_value.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
once_cell.workspace = true
chrono.workspace = true
fnv.workspace = true
http.workspace = true
async-trait.workspace = true

