[package]
name = "schema_transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdml_parser.workspace = true
graphql_value.workspace = true
pluralizer.workspace = true
convert_case.workspace = true
